<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/some_text"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="86dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_button"
        android:id="@+id/first"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"


        android:layout_marginTop="124dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_button"
        android:id="@+id/second"
        android:layout_below="@+id/first"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_button"
        android:id="@+id/third"
        android:layout_below="@+id/second"
        android:layout_centerHorizontal="true"
         />
</RelativeLayout>